--- a/frontend/src/css/ProfileGraphDashboard.css
+++ b/frontend/src/css/ProfileGraphDashboard.css
@@ -1,10 +1,3 @@
-.App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
 .expensive-nodes-card {
   margin-top: 20px;
   background-color: white;
@@ -92,7 +85,7 @@
 .custom-statistic {
   display: flex;
   align-items: center;
-  margin-bottom: 8px; /* 添加一些间距 */
+  margin-bottom: 8px;
 }
 
 .custom-dot {
